Update frontend and backend
