# back/src/resources/event/event.router.ts
@@ -8,10 +8,10 @@ const router = Router();
 
 router.get('/', isAuth, eventController.index);
 router.post('/publish/:eventId', isAuth, eventController.togglePublish);
+router.get('/read/:eventId', isAuth, eventController.read);
 router.get('/:userId', isAuth, eventController.indexFromUser);
 router.post('/', isAuth, validate(CreateEventDTOSchema), eventController.create);
 router.put('/:eventId', isAuth, validate(CreateEventDTOSchema), eventController.update);
-router.get('/read/:eventId', isAuth, eventController.read);
 router.delete('/:eventId', isAuth, eventController.remove);
 
 export default router;
