# back/src/resources/participant/participant.router.ts
@@ -7,6 +7,7 @@ const router = Router();
 router.get('/', isAuth, participantController.index);
 router.get('/players', isAuth, participantController.players);
 router.get('/spectators', isAuth, participantController.spectators);
+router.get('/me', isAuth, participantController.mine);
 router.delete('/u/:userId/e/:eventId', isAuth, participantController.removeById);
 router.post('/:eventId', isAuth, participantController.createAsSpectator);
 router.post('/:eventId/:code', isAuth, participantController.createAsPlayer);
